2011-03-30  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-vorbis.c:
	redefines avt.load_audio_file and avt.load_audio_string
	lua/audioplayer.lua, lua/akfavatar/avtdemo.lua: adapted

	* lua/lua-avt.c (avt.load_base_audio_file, avt.load_base_audio_string):
	new functions

	* lua/lua-avt.c (lavt_silent => avt.silent): new function

2011-03-28  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/avtdemo:
	commands avatarname, ballooncolor, textcolor improved
	commands size, width, height no longer needed (ignored)
	commands effectpause, back no longer supported

	* avtvorbis.c (avta_load_vorbis_file, avta_load_vorbis_data):
	first check if it's really plain Ogg Vorbis

2011-03-27  Andreas K. Foerster  <info@akfoerster.de>

	* avttermsys.c (avta_term_initialize):
	don't define environment variable AKFAVTTERM anymore

	* avtcmd: adapted to lua-akfavatar

2011-03-25  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_newline_mode): new function

	* filechooser.c (avta_file_selection): activate the newline mode

	* lua/lua-avt.c (lavt_long_menu): activate the newline mode

2011-03-24  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-term.c (lterm_setenv, lterm_unsetenv): new functions
	lua/terminal.lua: adapted

	* lua/akfavatar-term.c (lterm_execute): setlocale

	* lua/akfavatar-term.c (APC_command): convert cmd to current encoding

	* lua/akfavatar-term.en.about: preliminary documentation

2011-03-22  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/avtdemo.lua (wait, do_wait): new function/variable

	* avtgrmsg.c (avta_graphic_error): fix: unlock updates

	* lua/akfavatar-term.c (lterm_execute, APC_command, luaopen_term):
	register APC command handler for Lua commands

	* avtterm.c (avta_term_update_size): first check if size changed at all

	* avtterm.c (avta_term_send): check file-handle

	* lua/akfavatar-term.c (lterm_send, lterm_decide): new functions
